[project]
  name = "pulumiverse_cockroach"
  description = "A Pulumi package to create and managed Cockroach DB resources in Pulumi programs."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "cockroach", "pulumiverse"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.cockroachlabs.com/"
    Repository = "https://github.com/pulumiverse/pulumi-cockroach"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_cockroach = ["py.typed", "pulumi-plugin.json"]
